--- a/signup.html
+++ b/signup.html
@@ -140,7 +140,7 @@
             </div>
             <input type="submit" value = "SignUp" /> 
             <div class="signup_link">
-              Already have an account? <a href="/login">Login here</a>
+              Already have an account? <a href="/">Login here</a>
             </div>
             </form>
         </div>
